Bug 386753 - Share button doesn't prompt to install kipi-plugins if it's not installed
Summary: Share button doesn't prompt to install kipi-plugins if it's not installed
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 17.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2017-11-11 16:46 UTC by Nate Graham
Modified: 2018-06-03 06:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2017-11-11 16:46:27 UTC
https://bugs.kde.org/attachment.cgi?id=106820

The Share button doesn't prompt you to install kipi-plugins if it's not installed. The Plugins menu does, though; we should re-use that for the Share button.
Comment 1 Nate Graham 2017-11-12 02:58:03 UTC
Gotta copy what's in kipiinterface.cpp
Comment 2 null 2018-06-03 06:19:40 UTC
Git commit bc1d4c545a86242a64bec4a53353b7d286beb20d by Henrik Fehlauer, on behalf of Farid Boudedja.
Committed on 03/06/2018 at 06:19.
Pushed by rkflx into branch 'master'.

Prompt to install kipi-plugins when the share button is clicked

Summary:
When 'kipi-plugins' is not installed, the 'Share' menu shows 'No Plugin Found'. With this patch it will present a link to install the missing plugins instead (Similarly to what the 'Plugins' menu does).

Test Plan:
Without the **kipi-plugins** package installed, click on Share in the Gwenview toolbar.
It should display a menu action 'Install Plugins' which triggers the AppStream URL (appstream://photolayoutseditor.desktop).

Reviewers: #gwenview, ngraham, rkflx

Reviewed By: #gwenview, ngraham, rkflx

Subscribers: rkflx, nicolasfella

Tags: #gwenview

Differential Revision: https://phabricator.kde.org/D13197

M  +5    -1    app/kipiinterface.cpp

https://commits.kde.org/gwenview/bc1d4c545a86242a64bec4a53353b7d286beb20d